--- a/api-reference/advanced-testing/death-tests.mdx
+++ b/api-reference/advanced-testing/death-tests.mdx
@@ -1,291 +1,306 @@
 ---
-title: "Death Tests and Exception Assertions"
-description: "Documents APIs for writing death tests—tests that validate code exits (or aborts) under specified conditions—enabling robust error-handling and hardening verification. Includes details of macro usage and matcher integration."
+title: "Death Tests and Exception Handling"
+description: "Documents death testing (verifying process termination and assertions on errors), including style choices, macros, and exception-handling support. Outlines best practices for validating error paths and abnormal exits."
 ---
 
-# Death Tests and Exception Assertions
-
-GoogleTest provides powerful APIs to write *death tests*—tests that verify a piece of code causes the program to terminate (either exit or abort) under certain conditions. These tests enable you to rigorously verify precondition assertions, invalid usage handling, or unrecoverable errors without crashing your entire test suite. Along with death testing, the API also facilitates assertions related to program exit codes and signal terminations, and provides macros to gracefully handle assertions in debug versus optimized builds.
-
----
+# Death Tests and Exception Handling
 
 ## Overview
 
-Death tests are specialized tests that:
+Death tests allow you to verify that your code triggers the expected termination behavior — for example, when an assertion fails, an error causes the process to exit, or a fatal signal is raised. This page focuses on how to write, style, and manage death tests within GoogleTest, including macros, style options, and exception handling support.
 
-- **Confirm that a program statement causes process termination**, such as calls to `exit()` or abort signals.
-- **Check the exit status or signal causing termination**, ensuring it matches expected conditions.
-- **Validate the error output emitted to `stderr`** matches a given pattern.
+Death tests are vital for validating error paths and abnormal exits. They give you confidence that your code fails loudly and early on invalid inputs or unexpected conditions, preventing silent corruption or undefined behavior.
 
-Unlike normal unit tests, these tests run the statement in a separate subprocess to isolate termination from the test runner itself, capturing process exit information and output safely.
+---
 
-You can express death tests at various granularities, from simple assertions of termination to sophisticated predicates on exit conditions and matching error messages.
+## Death Tests: Core Concepts and Macros
 
+### What Are Death Tests?
 
-## Death Test Macros
+- Death tests are tests that verify your program *dies* (terminates abnormally or exits with a specific error code) on certain statements.
+- These tests spawn a child process to execute the lethal statement, isolating the parent test process from termination.
+- The child process's stderr output and exit status are checked against user-defined expectations.
 
-GoogleTest offers several macros for writing death tests, distinguished by how strict they are with test failures, and whether they allow checking exit predicates:
+### Key Macros
 
-| Macro                       | Behavior                                                                                 | Notes                                                  |
-|-----------------------------|------------------------------------------------------------------------------------------|--------------------------------------------------------|
-| `ASSERT_DEATH(statement, matcher)` | Fails fatally if `statement` does **not** terminate the process; verifies `stderr` matches `matcher` and exit is nonzero.| Aborts current function on failure.                     |
-| `EXPECT_DEATH(statement, matcher)` | Same as `ASSERT_DEATH`, but generates a nonfatal failure, allowing test continuation.   | Reviews behavior like `ASSERT_DEATH` but less strict.   |
-| `ASSERT_EXIT(statement, predicate, matcher)` | Fails fatally if `statement` does not cause process termination with an exit status satisfying `predicate`; verifies `stderr` matches `matcher`. | Use when you need to check exit codes or signal kills precisely. |
-| `EXPECT_EXIT(statement, predicate, matcher)` | Nonfatal variant of `ASSERT_EXIT`.                                                   | Useful when tests can continue after failure.           |
-| `EXPECT_DEBUG_DEATH(statement, matcher)` | Acts like `EXPECT_DEATH` **only in debug mode**; executes `statement` normally in optimized mode. | Helps test death conditions tied to debug assertions.    |
-| `ASSERT_DEBUG_DEATH(statement, matcher)` | Fatal variant of `EXPECT_DEBUG_DEATH`.                                                |                                                        |
-| `EXPECT_DEATH_IF_SUPPORTED(statement, matcher)` | Runs death test if supported on platform; otherwise skips with a warning.            | Useful for cross-platform testing.                       |
-| `ASSERT_DEATH_IF_SUPPORTED(statement, matcher)` | Fatal variant of above.                                                               |                                                        |
+GoogleTest provides several macros for death tests that you can use in your tests:
 
+| Macro                     | Behavior                                                                                                    |
+|---------------------------|-------------------------------------------------------------------------------------------------------------|
+| `ASSERT_DEATH(statement, matcher)`  | Abort current function if the statement does not cause death matching *matcher*; fatal failure on mismatch. |
+| `EXPECT_DEATH(statement, matcher)`  | Similar to ASSERT_DEATH, but continues on failure (nonfatal failure).                                         |
+| `ASSERT_EXIT(statement, predicate, matcher)` | Checks that the statement terminates with an exit status satisfying *predicate* and stderr matches *matcher*. |
+| `EXPECT_EXIT(statement, predicate, matcher)` | Non-fatal variant of ASSERT_EXIT.                                                                        |
+| `EXPECT_DEATH_IF_SUPPORTED(statement, matcher)` | Runs death test only if death tests are supported, otherwise logs a warning but does not fail.                |
+| `ASSERT_DEATH_IF_SUPPORTED(statement, matcher)` | Fatal variant of the above.                                                                                  |
+| `EXPECT_DEBUG_DEATH(statement, matcher)` | Runs death test only in debug builds; in release, executes statement without death checking.                    |
+| `ASSERT_DEBUG_DEATH(statement, matcher)` | Fatal variant of the above.                                                                                  |
 
-### Key Parameters
+### Assertions on Exit Status
 
-- **`statement`**: Any valid C++ statement or compound statement that is expected to terminate the process.
-- **`matcher`**: A string interpreted as a regex or a GoogleTest matcher matching `const std::string&` for output on `stderr`.
-- **`predicate`**: A callable accepting an exit status `int` and returning `bool` (e.g., `ExitedWithCode(code)` or `KilledBySignal(signal)`).
+- `ASSERT_EXIT` and `EXPECT_EXIT` support passing a predicate on the exit code, such as:
+  - `testing::ExitedWithCode(code)` to match normal exit with a specific code.
+  - `testing::KilledBySignal(signal_number)` (POSIX only) to match processes terminated by signals.
 
+### Matcher Parameter
+
+- The `matcher` parameter accepts either a GoogleTest matcher for `const std::string&` or a regular expression string.
+- Plain strings are treated as regex patterns matching the child's stderr output.
+- Regular expressions support a limited subset depending on platform, documented below.
+
+---
+
+## How Death Tests Work Internally
+
+1. GoogleTest forks or clones the current process.
+2. The child process executes the test statement that is expected to cause death.
+3. After the statement runs, the child process either:
+    - Exits or crashes (expected), or
+    - Returns or throws an exception (unexpected, treated as failure).
+4. The parent waits for the child to finish, capturing exit status and output.
+5. The parent checks output against the provided regex and exit code against the predicate.
+
+### Death Test Styles
+
+Two styles control how the child process is spawned and executes the test:
+
+| Style       | Description                                                                                                   |
+|-------------|---------------------------------------------------------------------------------------------------------------|
+| `fast`      | Child process immediately executes death test code after fork. Faster but less thread-safe.                   |
+| `threadsafe`| Child re-execs the test binary with a filter to run only the death test. Safer in multi-threaded contexts but slower. |
+
+- The default style is `fast`, but `threadsafe` is recommended for multithreaded environments.
+- On Windows and Fuchsia, death tests always behave like `threadsafe`.
+- You can specify style via `--gtest_death_test_style` flag or programmatically.
+
+### Thread Safety Considerations
+
+- Death tests **fork** or clone processes, which is unsafe when multiple threads are running.
+- GoogleTest warns if multiple threads exist when running death tests.
+- Name test suites containing death tests with `DeathTest` suffix to ensure earlier execution.
+
+### Handling Returns and Exceptions in Death Tests
+
+- If the death test statement executes a `return` instead of dying, the test fails.
+- GoogleTest protects you from exceptions escaping the death test by converting them to failures.
+- If exceptions are thrown, their messages are captured and reported in failure output.
+- You can configure GoogleTest to catch or not catch exceptions via the `catch_exceptions` flag.
+
+---
+
+## Writing Effective Death Tests
 
 ### Basic Usage Example
 
 ```cpp
-TEST(MyDeathTest, SimpleDeath) {
-  ASSERT_DEATH(DoSomethingThatKills(), "Fatal error detected");
+TEST(MyDeathTest, CausesAbort) {
+  ASSERT_DEATH({
+    // Statement expected to cause death
+    AbortIfInvalid(-1);
+  }, "error.*invalid input");
 }
 
-TEST(MyDeathTest, ExitCodeCheck) {
-  EXPECT_EXIT(NormalExit(), ::testing::ExitedWithCode(0), "Success");
+TEST(MyDeathTest, ExitsWithSuccess) {
+  EXPECT_EXIT(ExitNow(), testing::ExitedWithCode(0), "Success");
 }
 ```
 
-This verifies `DoSomethingThatKills` terminates with expected error output, while `NormalExit()` terminates normally with exit code 0.
+### Common Patterns
 
-
-## Death Test Behavior Details
-
-When a death test macro runs:
-
-1. **A warning is issued if multiple threads are active**, as forking a multi-threaded process is unsafe.
-2. The test binary is forked or cloned to create a subprocess.
-3. In **``fast``** death test style, the test code executes immediately in the child.
-4. In **``threadsafe``** style, the child re-executes the entire test binary but only runs the specific death test.
-5. The parent process waits for the child process to terminate.
-6. The parent verifies the child's exit status against the predicate.
-7. The parent verifies the child's `stderr` output against the matcher.
-8. The macro either passes or raises a failure accordingly.
-
-
-### Death Test Styles
-
-The style is controlled by the flag `GTEST_FLAG_SET(death_test_style, "fast")` or "threadsafe". The default is "fast".
-
-- **Fast style:** Forks and immediately runs test logic in child - faster but less thread-safe.
-- **Threadsafe style:** Forks and re-executes test binary in child, selecting only the death test to run - safer for multi-threaded environments at some performance cost.
-
-
-### Important Caveats
-
-- You cannot have multiple death test macros on the same source code line.
-- The `statement` must **not return or throw** an exception; doing so fails the death test.
-- Side effects inside the death test `statement` (memory changes, etc.) occur **only in the child process** and are not visible to the parent.
-- If your death test involves mock objects with leak detection, must **allow mocks to leak** to avoid false leak errors.
-
-
-## Exit Status Predicates
-
-Two commonly-used predicates for exit status matching are provided:
-
-- `::testing::ExitedWithCode(int exit_code)`
-
-  Checks whether the process exited normally with the given code.
-
-- `::testing::KilledBySignal(int signal_number)`
-
-  Checks whether the process was terminated by the specified signal (POSIX only).
-
-
-Example usage:
+- Use compound statements `{ ... }` for multi-line death test code.
+- Stream extra failure info after the macro:
 
 ```cpp
-EXPECT_EXIT(DoCleanup(), ::testing::ExitedWithCode(0), "Cleanup complete");
-EXPECT_EXIT(SendKillSignal(), ::testing::KilledBySignal(SIGKILL), "Killed");
+EXPECT_DEATH(DoSomethingBad(), "Fatal error") << "Should die on invalid input";
 ```
 
-
-## Regular Expression Syntax for Matchers
-
-- On POSIX systems, GoogleTest uses the POSIX extended regex library with full syntax.
-- On Windows/macOS, a simpler built-in regex engine supports a **subset** of regex features.
-
-Supported constructs include:
-
-| Expression | Meaning |
-|------------|---------|
-| `c`        | Matches literal character `c` |
-| `\d`      | Matches a digit |
-| `\D`      | Matches a non-digit |
-| `\s`      | Matches whitespace |
-| `\S`      | Matches non-whitespace |
-| `\w`      | Matches alphanumeric or underscore |
-| `\W`      | Matches non-word character |
-| `.`        | Matches any character except newline |
-| `A?`       | Matches 0 or 1 occurrences of `A` |
-| `A*`       | Matches 0 or more occurrences of `A` |
-| `A+`       | Matches 1 or more occurrences of `A` |
-| `^`        | Matches beginning of string |
-| `$`        | Matches end of string |
-| `xy`       | Matches expression `x` followed by `y` |
-
-Unsupported or limited features: union (`x|y`), grouping (`(xy)`), bracket expressions (`[xy]`), repetition counts (`{m,n}`), etc.
-
-
-## Debug Mode Death Tests
-
-`EXPECT_DEBUG_DEATH` and `ASSERT_DEBUG_DEATH` macros behave as death tests **only in debug builds** (when `NDEBUG` is not defined). In optimized builds, they simply execute the statement normally. This enables testing code that asserts or aborts only in debug mode (e.g., via `LOG(DFATAL)`).
-
-Example:
+- Use loops to test death under multiple conditions:
 
 ```cpp
-EXPECT_DEBUG_DEATH(
-    FunctionThatLogsDFATAL(),
-    "death from debug condition"
-);
+for (int i = 0; i < 5; ++i) {
+  EXPECT_DEATH(Process(i), "process.*failed") << "Iteration " << i;
+}
 ```
 
-In optimized build, the statement runs but no death check is performed.
+### Testing Methods, Functions, Lambdas
 
+- Death test statements can be static member functions, instance methods (with flags to control death), or global functions.
+- Functions with parameters can be tested by invoking them in the death test statement.
+
+### Using Matchers for Output
+
+- You can pass any matcher convertible to `Matcher<const std::string&>`.
+- Regular expression strings allow partial or multiline matches.
+
+### Best Practices for Death Tests
+
+- Death tests run in isolated child processes, so side effects like memory changes won't persist.
+- Avoid complex side effects in death test statements.
+- Beware that mocks may need to be leaked when used in death test code to avoid false leak detection.
+- Use `SCOPED_TRACE` to add context to failures in death tests inside loops or helper functions.
+
+---
+
+## Regular Expression Syntax Supported in Death Tests
+
+- On POSIX systems, POSIX Extended Regex are supported.
+- On Windows and Mac, a limited simple regex syntax is supported. Features include:
+
+| Expression | Meaning                                      |
+|------------|----------------------------------------------|
+| `c`        | Match literal character `c`                   |
+| `\d`      | Match any decimal digit                        |
+| `\D`      | Match any non-digit character                  |
+| `\f`, `\n`, `\r`, `\s`, `\S`, `\t`, `\v` | Match respective whitespace or control characters |
+| `\w`      | Match letter, digit or underscore              |
+| `\W`      | Match any char not matched by `\w`           |
+| `.`        | Match any single character except newline     |
+| `A?`       | Match zero or one of `A`                       |
+| `A*`       | Match zero or more of `A`                      |
+| `A+`       | Match one or more of `A`                       |
+| `^`        | Beginning of string                            |
+| `$`        | End of string                                  |
+| `xy`       | Sequence of x followed by y                    |
+
+- Unsupported syntax includes unions (`x|y`), groupings (`(xy)`), repetition counts (`x{n,m}`), and brackets (`[xy]`).
+
+---
 
 ## Exception Handling in Death Tests
 
-If GoogleTest is compiled with exception support, death tests will catch any exceptions thrown by the `statement` inside death test macros and treat them as test failures instead of causing the test to exit.
+GoogleTest supports detecting exceptions thrown inside death tests and reports them as failures instead of allowing them to escape:
 
-This protects the test runner and surfaces exceptions that escape, improving diagnostics.
+- With exceptions enabled (`GTEST_HAS_EXCEPTIONS`), exceptions derived from `std::exception` are caught, and the message is printed in the failure output.
+- Non-`std::exception` exceptions are also caught and cause failure.
+- Structured exceptions on Windows (SEH) are handled properly.
 
 Example:
 
 ```cpp
-EXPECT_NONFATAL_FAILURE(
-    EXPECT_DEATH(throw std::runtime_error("failure"), ""),
-    "threw an exception"
-);
-```
-
-
-## Handling Unsupported Platforms
-
-Some platforms do not support death tests. On those, `EXPECT_DEATH_IF_SUPPORTED` and `ASSERT_DEATH_IF_SUPPORTED` macros expand to warnings and will skip running the test, allowing portable test code.
-
-
-## Troubleshooting Common Pitfalls
-
-- **Test hangs or deadlocks:** Check for multiple threads running when a death test starts. Use "threadsafe" death test style to reduce risk.
-
-- **Unexpected passed death test:** Ensure the predicate and matcher actually match the output and exit code.
-
-- **Regex match errors:** Verify you use supported subset of regex syntax.
-
-- **Side effects not visible:** Remember death test runs in subprocess; shared memory or external state must be used to observe side effects.
-
-- **Use of `return` or exceptions inside death test statement:** These cause immediate test failure with detailed diagnostics.
-
-
-## Practical Examples
-
-### Basic Death Test
-
-```cpp
-TEST(MyDeathTest, FailsOnNullptr) {
-  ASSERT_DEATH({ Foo(nullptr); }, "null pointer");
+TEST(CxxExceptionDeathTest, ExceptionIsFailure) {
+  EXPECT_NONFATAL_FAILURE(
+    EXPECT_DEATH(throw std::runtime_error("fail"), ""),
+    "threw an exception");
 }
 ```
 
-### Death Test with Exit Code Check
-
-```cpp
-void ExitCleanly() { 
-  std::cerr << "Logging info before exit" << std::endl;
-  exit(42);
-}
-
-TEST(MyDeathTest, CleansUpAndExitsWith42) {
-  EXPECT_EXIT(ExitCleanly(), ::testing::ExitedWithCode(42), "Logging info");
-}
-```
-
-### Debug Death Test (only triggers in debug builds)
-
-```cpp
-int FunctionWithDFATAL(int* side_effect) {
-  if (side_effect) *side_effect = 100;
-  LOG(DFATAL) << "Debug-time failure";
-  return 100;
-}
-
-TEST(MyDeathTest, CheckDFATALBehavior) {
-  int result = 0;
-  EXPECT_DEBUG_DEATH({
-    int val = FunctionWithDFATAL(&result);
-    EXPECT_EQ(val, 100);
-  }, "Debug-time failure");
-}
-```
-
-
-## Best Practices
-
-- Name your test suite or fixture class ending with `DeathTest` to ensure it runs before other tests for better thread-safety and ordering.
-- Keep death test statements simple and avoid constructs that return or throw inside the statement.
-- Use `threadsafe` death test style for multi-threaded programs.
-- For mocks used in death tests, suppress leak detection or allow leak if intercepting mocks.
-- Attach meaningful regular expressions that focus on key parts of the error output.
-- Use `EXPECT_DEATH_IF_SUPPORTED` if your code should run on platforms without death test support.
-
-
-## Related Assertions
-
-Death test macros are part of a larger family of GoogleTest assertions; see the [Assertions Reference](reference/assertions.md) for more details on failure types, exception assertions, and predicate assertions.
-
-
-## Troubleshooting
-
-**Issue:** Death test hangs or crashes
-
-**Solution:**
-
-- Set the death test style to `threadsafe`: `GTEST_FLAG_SET(death_test_style, "threadsafe");`
-- Ensure your program is single-threaded when the death test runs.
-- Avoid using global mutable state in death tests.
-
-**Issue:** Regex does not match output
-
-**Solution:**
-
-- Confirm regex syntax is compatible with platform supported subset.
-- Check output from test failure messages for exact stderr contents.
-
-**Issue:** Side effects not observed
-
-**Solution:**
-
-- Move side-effecting code outside death tests or use external/shared memory.
-- Avoid relying on mocked method calls across death test boundaries.
-
+You can configure whether GoogleTest catches exceptions or lets them escape via the `catch_exceptions` flag.
 
 ---
 
-# Summary
+## Common Issues and Troubleshooting
 
-You now understand how to use GoogleTest's death test macros to validate conditions that lead to process termination, verify exit status and error diagnostics, and selectively test debug-specific fatal behaviors. Death tests isolate dangerous code paths safely and offer powerful assertions for robust error handling.
-
-Explore the following documentation to deepen your mastery:
-
-- [Assertions Reference](reference/assertions.md#death) for assertion details
-- [Advanced GoogleTest Topics](docs/advanced.md#death-tests) for nuanced death test guidance
-- [Matchers and Custom Matchers](api-reference/assertions-and-matchers/using-matchers) for tailored regex and matchers in death tests
-- [Mocking API](api-reference/mocking-api) when mocks are involved in death tests
-
-Next, consider integrating death tests in your CI setup and combining them with exception assertions to strengthen coverage and reliability.
-
+- Death tests **must not** contain statements that `return` or throw exceptions, as these cause test failure.
+- Multiple death test macros on the same line cause compilation errors.
+- Threads existing at death test time trigger warnings due to unsafe fork behavior.
+- Using mocks inside death tests requires allowing leaks via `Mock::AllowLeak`.
+- On systems without death test support, `EXPECT_DEATH_IF_SUPPORTED` macros produce warnings but do not fail.
 
 ---
 
-_Source code and test examples are available in the official [googletest repository](https://github.com/google/googletest/tree/main/googletest) under `include/gtest/gtest-death-test.h` and `test/googletest-death-test-test.cc`._
+## Example: Simple Death Test
+
+```cpp
+#include <gtest/gtest.h>
+
+void DieNow() {
+  fprintf(stderr, "fatal error\n");
+  _Exit(1);
+}
+
+TEST(MyDeathTest, DiesWithMessage) {
+  EXPECT_DEATH(DieNow(), "fatal error");
+}
+```
+
+---
+
+## Detailed Behavior
+
+### Child Process Execution
+
+In `fast` style, the death test child executes the test statement immediately after fork. In `threadsafe` style, the child re-executes the whole test binary but filters to run only the death test.
+
+In either case, if the statement completes without terminating, or if it returns or throws, the death test fails.
+
+### Result Matching
+
+GoogleTest reads the child's stderr output and exit status. It then:
+
+- Verifies the exit status against the predicate (or nonzero for ASSERT_DEATH).
+- Verifies the stderr output matches the matcher or regex pattern.
+
+If either check fails, it reports detailed failure messages, including actual vs expected outputs.
+
+---
+
+## Related Flags
+
+- `--gtest_death_test_style`: Choose between `fast` or `threadsafe` death test style.
+- `--gtest_internal_run_death_test`: Used internally to pass death test context during re-execution.
+- `catch_exceptions`: Enable or disable catching exceptions.
+
+---
+
+## Additional Resources
+
+- See [Assertions Reference](reference/assertions.md#death) for all related macros.
+- Consult [Advanced Guide](advanced.md#death-tests) for practical usage patterns and best practices.
+- Review example death tests in `googletest` test suite (`googletest-death-test-test.cc`).
+
+---
+
+## Troubleshooting Tips
+
+- **Unexpected non-fatal failure in death test:** Ensure the statement truly terminates the process.
+- **Regex does not match output:** Use simpler or appropriately escaped expressions within the supported subset.
+- **Thread warnings:** If multiple threads exist, use `threadsafe` death test style.
+- **Death test skipped or no death test support:** Check platform and build configuration support.
+
+---
+
+## Summary
+
+Death tests are a critical feature for verifying that your program properly fails under invalid conditions. Use provided macros like `ASSERT_DEATH` and `EXPECT_EXIT` with predicates and matchers to precisely control and verify process termination and error output. The available styles let you balance speed and thread safety, and built-in exception handling ensures that exception escapes are reported as failures.
+
+Remember to carefully design statements to cause process death without returning or throwing unexpectedly, and use appropriate regex matchers for validating error output.
+
+---
+
+## Code Snippet: Death Test for Function Throwing an Exception
+
+```cpp
+#if GTEST_HAS_EXCEPTIONS
+
+class TestException : public std::exception {
+ public:
+  const char* what() const noexcept override { return "exceptional message"; }
+};
+
+TEST(CxxExceptionDeathTest, ThrowsExceptionCausesFailure) {
+  EXPECT_NONFATAL_FAILURE(
+      EXPECT_DEATH(throw TestException(), ""),
+      "exceptional message");
+}
+
+#endif
+```
+
+---
+
+## Notes
+
+- Death tests are necessarily slower because of process spawning.
+- They do not preserve changes to in-memory state in the parent process.
+- Avoid placing multiple assertions in a single death test statement to maintain clear failure reports.
+
+---
+
+## Learn More
+
+- [GoogleTest Primer](docs/primer.md) – Introduces test basics.
+- [Assertions Reference](reference/assertions.md#death) – Details on death test assertions.
+- [Advanced Guide](docs/advanced.md#death-tests) – In-depth style and usage recommendations.
+- `googletest/test/googletest-death-test-test.cc` – Real death test examples.
+
+---
